fixed issue with overflowing text

--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -106,6 +106,11 @@
 .selectedText {
   padding: 0px 8px;
   line-height: 30px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: calc(100% - 35px);
+  height: 30px;
+  white-space: nowrap;
 }
 
 .filtersList li:hover {
